--- a/Python_Hackathon_Aug2024_41to60.ipynb
+++ b/Python_Hackathon_Aug2024_41to60.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1393,
+   "execution_count": 1504,
    "id": "49425556-5569-4448-abfe-cfa1977f4538",
    "metadata": {},
    "outputs": [
@@ -83,21 +83,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "       ID     time     RR       VO2  power    phase         HR\n",
-      "0      11 -168.600  727.0  0.287147      0  Warm Up  82.530949\n",
-      "1      11 -167.872  728.0  0.287147      0  Warm Up  82.417582\n",
-      "2      11 -167.148  724.0  0.287147      0  Warm Up  82.872928\n",
-      "3      11 -166.484  664.0  0.320580      0  Warm Up  90.361446\n",
-      "4      11 -165.836  648.0  0.320580      0  Warm Up  92.592593\n",
-      "...    ..      ...    ...       ...    ...      ...        ...\n",
-      "49658  10   -3.452  716.0  0.300803      0  Warm Up  83.798883\n",
-      "49659  10   -2.712  740.0  0.291465      0  Warm Up  81.081081\n",
-      "49660  10   -2.032  680.0  0.291465      0  Warm Up  88.235294\n",
-      "49661  10   -1.348  684.0  0.291465      0  Warm Up  87.719298\n",
-      "49662  10   -0.664  684.0  0.308664      0  Warm Up  87.719298\n",
-      "\n",
-      "[4241 rows x 7 columns]\n",
-      "The heart rate during a GET could be 87.86 % higher than during the warm-up.\n"
+      "the difference 82.49 in heart rate between warm up and GET for athlete 1\n"
      ]
     }
    ],
@@ -106,20 +92,23 @@
     "data_Criteria['HR'] = 60 / (data_Criteria['RR'] / 1000)\n",
     "#print(sheet_criteria.head())\n",
     "\n",
-    "HR_warm_up_data = data_Criteria[data_Criteria['phase']=='Warm Up']\n",
-    "HR_GET_data = data_Criteria[data_Criteria['phase']=='GET']\n",
-    "print(HR_warm_up_data)\n",
+    "#copying the data for ID = 1\n",
+    "req_data = data_Criteria[data_Criteria['ID'] == 1]\n",
+    "#print(req_data)\n",
     "\n",
+    "warm_up_data = req_data[req_data['phase']=='Warm Up']\n",
+    "GET_data = req_data[req_data['phase']=='GET']\n",
+    "#print(GET_data)\n",
     "\n",
     "# Calculate the average HR for phase - warmup & GET\n",
-    "average_HR_warm_up = HR_warm_up_data['HR'].mean()\n",
-    "average_HR_GET = HR_GET_data['HR'].mean()\n",
+    "average_warm_up = warm_up_data['HR'].mean()\n",
+    "average_GET = GET_data['HR'].mean()\n",
     "#print(\"average HR GET\",average_HR_GET)\n",
     "#print(\"average HR warmup\",average_HR_warm_up)\n",
     "\n",
     "#Find the average % difference in HR\n",
-    "HR_differnce = ((average_HR_GET - average_HR_warm_up)/average_HR_warm_up )*100\n",
-    "print(f\"The heart rate during a GET could be {percentage_differnce:0.2f} % higher than during the warm-up.\")"
+    "HR_differnce = average_GET - average_warm_up\n",
+    "print(f\"the difference {HR_differnce:0.2f} in heart rate between warm up and GET for athlete 1\")\n"
    ]
   },
   {
@@ -233,11 +222,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1472,
    "id": "f392d860-f887-4b93-b214-2be33e03cbd7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The participant 15's exercise lasted for 21782.5258 min and the total VO2max is 66.936066 ml/kg\n"
+     ]
+    }
+   ],
+   "source": [
+    "#copying the data for ID 15\n",
+    "req_data = data_Criteria[data_Criteria['ID'] == 15]\n",
+    "#grouping the data to find the total time and total vo2\n",
+    "req_data = req_data.groupby(['ID'])[['VO2','time']].sum().reset_index()\n",
+    "#merging the data to fetch the weight of each athlete\n",
+    "data = pd.merge(req_data, data_Athletes[['ID','Weight']], on='ID', how='inner')\n",
+    "#calculating VO2Max\n",
+    "data['VO2Max'] = data['VO2']/data['Weight']\n",
+    "#assigning total time in minutes and vo2max to the variables\n",
+    "tottime = (data['time']/60).to_string(index = False)\n",
+    "vo2max = data['VO2Max'].to_string(index = False)\n",
+    "#printing the result\n",
+    "print(f\"The participant 15's exercise lasted for {tottime} min and the total VO2max is {vo2max} ml/kg\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -472,6 +483,54 @@
     "\n",
     "for id in lst_VO2_max:\n",
     "    print(f\"{id:.2f} (ml/kg) \")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb157f37-243f-4f0f-b7c7-e38819922186",
+   "metadata": {},
+   "source": [
+    "**52.Using all markers of fitness available to you, who is fittest athlete. Write 1-2 lines about the analysis that led to your insight.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1523,
+   "id": "e060e317-bafe-4b4b-b1f1-f452b2ae3d64",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The fittest athlete is determined by having the highest VO2ml/kg value\n",
+      "\n",
+      "ID: 12.0 is fittest with VO2ml/kg  92.26\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Analysis - The fittest athlete is determined by having the highest VO2ml/kg value,\n",
+    "#which indicates the greatest capacity for oxygen consumption relative to body weight.\n",
+    "#This metric is a strong indicator of cardiovascular fitness and overall athletic performance.\n",
+    "#variable used : Vo2 ,weight,height\n",
+    "# Step 1 : Grouping the data and calculating VO2Sum for each athlete\n",
+    "vo2_sum_1 = data_merged.groupby(['ID'])['VO2'].sum().reset_index()\n",
+    "vo2_sum_1.rename(columns={'VO2': 'VO2Sum'}, inplace=True)  # Renaming the column to VO2Sum\n",
+    "# Step 2: Convert height to meters and calculate BMI\n",
+    "data_Athletes['Height_metre'] = data_Athletes['Height'] / 100\n",
+    "data_Athletes['BMI'] = data_Athletes['Weight'] / (data_Athletes['Height_metre'] ** 2)\n",
+    "# Step 3 :Merging the data to fetch the weight of each athlete\n",
+    "vo2_sum_2 = pd.merge(vo2_sum_1, data_Athletes[['ID', 'Weight', 'BMI']], on='ID', how='left')\n",
+    "# Step 4 :Calculating VO2Max (VO2Sum per kg of body weight)\n",
+    "vo2_sum_2 ['VO2Max'] = vo2_sum_2['VO2Sum'] / vo2_sum_2['Weight']\n",
+    "#Step 5 : Sort VO2ml/kg values to find the athlete with max VO2ml/kg\n",
+    "fit_athlete=vo2_sum_2.sort_values('VO2Max',ascending=False).reset_index(drop=True)\n",
+    "place_1=fit_athlete.iloc[0]\n",
+    "#print(place_1.head())\n",
+    "#Step 6 : Print fittest athlete details\n",
+    "print(\"The fittest athlete is determined by having the highest VO2ml/kg value\\n\")\n",
+    "print(\"ID:\", place_1['ID'], \"is fittest with VO2ml/kg \", \"{:.2f}\".format(place_1['VO2Max']))"
    ]
   },
   {
@@ -772,12 +831,12 @@
    "id": "7886daf2-7dbd-45f1-a13e-0b6c437b15ee",
    "metadata": {},
    "source": [
-    "59. Who is the tallest athlete in the dataset. What is his sport and his Vo2 ml/kg?"
+    "**59. Who is the tallest athlete in the dataset. What is his sport and his Vo2 ml/kg?**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1329,
+   "execution_count": 1463,
    "id": "baa0bcf7-62c0-4906-a0a3-a3fbb04ba53a",
    "metadata": {},
    "outputs": [
@@ -793,24 +852,21 @@
     }
    ],
    "source": [
-    "\n",
     "# find maximum value of athletes height\n",
     "print(f\"The tallest athletes's height is {maxHeight} \\n {df1[['sport','VO2Max']].iloc[df1['Height'].idxmax()]}\")\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0f23953d-7c08-4f41-bbb3-1f4f5ebae7d0",
+   "cell_type": "markdown",
+   "id": "571c698a-9e66-4b54-aef5-936ec84aea6d",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "60.get the last letter of athletes last names using RegEX"
+    "**60.get the last letter of athletes last names using RegEX**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1331,
+   "execution_count": 1468,
    "id": "0b8bcd0b-982d-407b-b887-72feee09101a",
    "metadata": {},
    "outputs": [
@@ -840,7 +896,7 @@
     }
    ],
    "source": [
-    "list_of_50 = sheet_Athletes.iloc[:50] \n",
+    "list_of_50 = data_Athletes.iloc[:50] \n",
     "# Converting DataFrame to list using values property\n",
     "list = list_of_50['Last Name'].tolist()\n",
     "\n",
